Add Navbar and header outline

--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -5,7 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Shogun_stylesheet.css" />
-    <title>Shogun Maitake</title>
+    <title>Home - Shogun Maitake</title>
   </head>
-  <body></body>
+  <body>
+    <!--Website Header-->
+    <header class="flex-container">
+      <!-- Header logo goes here -->
+      <img src="" alt="" />
+    </header>
+    <!-- Website Nav Bar -->
+    <nav Class="navBar">
+      <!-- Each of these nav bar options should have drop down menus except "ORDER
+      ONLINE" and "CONTACT" -->
+      <li><a href="#"> HOME</a></li>
+      <li><a href="#">ABOUT</a></li>
+      <li><a href="#">FRESH MAITAKE & RECIPES</a></li>
+      <li><a href="#">DIETARY SUPPLEMENTS</a></li>
+      <li><a href="#">HEALTH BENEFIT</a></li>
+      <li><a href="#">ORDER ONLINE</a></li>
+      <li><a href="#">CONTACT</a></li>
+    </nav>
+  </body>
 </html>
