Fill in initial body section of webpage

--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -47,7 +47,6 @@
           </div>
         </div>
       </li>
-
       <li>
         <div class="dropdown">
           <button class="drop-button">FRESH MAITAKE & RECIPES</button>
@@ -56,7 +55,6 @@
           </div>
         </div>
       </li>
-
       <li>
         <div class="dropdown">
           <button class="drop-button">DIETARY SUPPLEMENTS</button>
@@ -74,5 +72,159 @@
       </li>
       <li><a href="#">CONTACT</a></li>
     </nav>
+    <!-- Section 1: Experience The Magic Of The Maitake Mushroom -->
+    <section>
+      <!-- Header and text -->
+      <div>
+        <h3>Experience the Magic of the Maitake Mushroom</h3>
+        <h1>
+          A Tradition Crafted In The Heart Of Japan, Now Shared With North
+          America
+        </h1>
+        <!-- LEARN MORE button -->
+        <button class="learn-more-button">LEARN MORE</button>
+      </div>
+      <!-- shifting gallery of images of maitake mushrooms-->
+      <img src="/Images/Photos/Maitake-Magic.jpeg" alt="" />
+      <div></div>
+    </section>
+    <!-- Section 2: The Delicacy of the Maitake Mushroom -->
+    <section>
+      <!-- Insert image of plated maitake mushrooms -->
+      <div>
+        <img
+          src="/Images/Photos/home_welcome2.jpg"
+          alt="A plate of Maitake Mushrooms"
+          sizes="(min-width: 1450px) 75vw, (min-width: 1000px) 85vw, 100vw"
+          width="1000"
+          height="667"
+        />
+      </div>
+
+      <!-- insert header and text body -->
+      <div>
+        <h2>
+          <span style="color: #ffcf58"
+            >The Delicacy of the Maitake Mushroom</span
+          >
+        </h2>
+        <p>
+          Maitake mushrooms, whether cultivated or grown in the wild, are
+          intensely flavored with a texture that even mushroom haters could get
+          past. Maitake mushrooms do not have that squeaky texture, but rather a
+          delicate and feathery texture. Most chefs would describe the Maitake
+          mushroom as almost having leaves or feathers and all you really do is
+          pull each little piece apart and sauté them, so no slicing is needed.
+          Maitake mushrooms grow to be quite large, so in some instances you can
+          slice off a chunk and cook it like a steak, either grilling or
+          sautéing the slice whole. Maitake mushrooms are very versatile and can
+          be sauteed on their own or added to dishes like pasta, risotto or
+          eggs.
+        </p>
+      </div>
+      <!-- Insert three buttons, FRESH MAITAKE, RECIPES, and DIETARY SUPPLEMENT -->
+      <div>
+        <button class="jumping-button">FRESH MAITAKE</button>
+        <button class="jumping-button">RECIPES</button>
+        <button class="jumping-button">DIETARY SUPPLEMENT</button>
+      </div>
+    </section>
+    <!-- Section 3: Health Benefits Of The Maitake Mushroom -->
+    <section>
+      <!-- Insert Table containing correct icons, headers, and text -->
+      <div>
+        <h2>Health Benefits Of The Maitake Mushroom</h2>
+        <h4>So Much More Than Just a Rich Tasting Mushroom.</h4>
+      </div>
+      <div>
+        <div>
+          <img src="/Images/Icons/healthbenefits_bloodsugar (1).png" alt="" />
+          <h3>Lowers Blood Sugar</h3>
+          <p>
+            Research studies have shown that Maitake mushrooms may work to
+            decrease insulin resistance thereby increasing insulin sensitivity.
+          </p>
+        </div>
+        <div>
+          <img src="/Images/Icons/healthbenefits_cancer.png" alt="" />
+          <h3>Fights Cancer</h3>
+          <p>
+            The beta glucans in Maitake mushrooms help to activate and produce
+            white blood cells called macrophages. Macrophages work in the body
+            to ingest and destroy tumor cells. This can help to make
+            chemotherapy more effective. Maitake mushrooms are also shown to
+            lessen the side effects of anti-cancer drugs by decreasing nausea,
+            vomiting, and hair loss.
+          </p>
+        </div>
+        <div>
+          <img src="/Images/Icons/home_immune.png" alt="" />
+          <h3>Boosts Immune System</h3>
+          <p>
+            Maitake mushrooms contain a polysaccharide fiber called beta glucan.
+            The beta glucans in Maitake mushrooms works to activate and increase
+            production of certain immune system cells. These cells can help the
+            immune system to more quickly and efficiently fight against illness.
+          </p>
+        </div>
+        <div>
+          <img src="/Images/Icons/healthbenefits_heart.png" alt="" />
+          <h3>Heart Health & Weight Loss</h3>
+          <p>
+            Eating Maitake mushrooms can help to decrease blood pressure levels,
+            lower total cholesterol levels, and help maintain weight which can
+            all help to promote heart health. The mushrooms are found to be low
+            in calories and high in fiber which can increase satiety and
+            feelings of fullness.
+          </p>
+        </div>
+      </div>
+      <!-- Insert "learn more" button -->
+      <button class="learn-more-button">LEARN MORE</button>
+    </section>
+    <!-- About the shogun facility -->
+    <section>
+      <div><img src="/Images/Photos/Shogun_084.jpg" alt="" /></div>
+      <div>
+        <h2>About The Shogun Facility</h2>
+        <h4>
+          <span style="color: #ffcf58">
+            A State Of The Art Facility Perfected To Guarantee Exceptional
+            Results.</span
+          >
+        </h4>
+      </div>
+      <div>
+        <p>
+          The facilities of Shogun Maitake in London, Ontario were carefully
+          designed to ensure that the mushrooms were grown in a safe and
+          controlled environment. The result, is a Maitake mushroom which is
+          free of pesticides and chemicals, and will exceed expectations in
+          terms of taste, texture and freshness. Shogun Maitake uses
+          state-of-the-art technology in order to replicate the natural growing
+          conditions for Maitake mushrooms (mountains of northeastern Japan).
+          This technology allows for the careful control and manipulation of
+          humidity/temperature (and other factors) conditions to which factors)
+          conditions to which the mushrooms are subjected. Shogun Maitake uses a
+          proprietary growing process which was pioneered by our founder and
+          CEO, Yoshinobu Odaira. This process was developed many years ago when
+          others said that the artificial cultivation of Maitake mushrooms was
+          impossible. Working day and night over the course of many months, Mr.
+          Odaira was successfully able to develop a protocol which would allow
+          for the mass production of Maitake mushrooms by replicating the
+          changes seasons inside a factory setting.
+        </p>
+      </div>
+      <div>
+        <button class="learn-more-button">LEARN MORE</button>
+      </div>
+    </section>
+    <!-- Partner Logo Bar -->
+    <section class="flex-container" id="logoBar">
+      <li><img src="/Images/Logos/eco-cert.jpg" alt="" /></li>
+      <li><img src="/Images/Logos/home_sqflogo.png" alt="" /></li>
+      <li><img src="/Images/Logos/home_MushroomsCanadaLogo.jpg" alt="" /></li>
+      <li><img src="/Images/Logos/home_DRCLogo.jpg" alt="" /></li>
+    </section>
   </body>
 </html>
