--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -229,17 +229,18 @@
     <footer>
       <div>
         <!-- location of logo and icon -->
+        <img src="/Images/Logos/ShogunLogo.png" alt="" />
       </div>
       <div>
-       <li>quick links</li>
-      <li>Home</li>
-      <li>about us</li>
-      <li>about Maitake</li>
-      <li>fresh maitake</li>
-      <li>dietary supplements</li>
-      <li>health benefits</li>
-      <li>contact</li>
-      <li>privacy policy</li>
+        <li>quick links</li>
+        <li>Home</li>
+        <li>about us</li>
+        <li>about Maitake</li>
+        <li>fresh maitake</li>
+        <li>dietary supplements</li>
+        <li>health benefits</li>
+        <li>contact</li>
+        <li>privacy policy</li>
       </div>
     </footer>
     <div>
