Invert colors on section 3

--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -130,7 +130,7 @@
       </div>
     </section>
     <!-- Section 3: Health Benefits Of The Maitake Mushroom -->
-    <section>
+    <section class="inverted-schema">
       <!-- Insert Table containing correct icons, headers, and text -->
       <div>
         <h2>Health Benefits Of The Maitake Mushroom</h2>
