Add Montserrat font

--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -124,7 +124,8 @@
       </div>
       <!-- Insert three buttons, FRESH MAITAKE, RECIPES, and DIETARY SUPPLEMENT -->
       <div>
-        <button class="jumping-button">FRESH MAITAKE</button>
+        <a href="#" class="jumping-button"></a>
+        <button>FRESH MAITAKE</button>
         <button class="jumping-button">RECIPES</button>
         <button class="jumping-button">DIETARY SUPPLEMENT</button>
       </div>
