Add additional font and add font folder

--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -189,10 +189,8 @@
       <div>
         <h2>About The Shogun Facility</h2>
         <h4>
-          <span style="color: #ffcf58">
-            A State Of The Art Facility Perfected To Guarantee Exceptional
-            Results.</span
-          >
+          A State Of The Art Facility Perfected To Guarantee Exceptional
+          Results.
         </h4>
       </div>
       <div>
