--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -184,9 +184,9 @@
       <button class="learn-more-button">LEARN MORE</button>
     </section>
     <!-- About the shogun facility -->
-    <section>
+    <section id="section-4" class="flex-container">
       <div><img src="/Images/Photos/Shogun_084.jpg" alt="" /></div>
-      <div>
+      <div class="dividingLine">
         <h2>About The Shogun Facility</h2>
         <h4>
           A State Of The Art Facility Perfected To Guarantee Exceptional
