Update format of headings

--- a/Shogun_Homepage.html
+++ b/Shogun_Homepage.html
@@ -131,14 +131,16 @@
       </div>
     </section>
     <!-- Section 3: Health Benefits Of The Maitake Mushroom -->
-    <section class="inverted-schema">
+    <section id="section-3" class="inverted-schema flex-container">
       <!-- Insert Table containing correct icons, headers, and text -->
-      <div>
-        <h2>Health Benefits Of The Maitake Mushroom</h2>
-        <h4>So Much More Than Just a Rich Tasting Mushroom.</h4>
+      <div class="centeredHeading">
+        <h2 class="inverted-schema">Health Benefits Of The Maitake Mushroom</h2>
+        <h4 class="inverted-schema">
+          So Much More Than Just a Rich Tasting Mushroom.
+        </h4>
       </div>
-      <div>
-        <div>
+      <div id="section-3-2" class="flex-container">
+        <div class="subItem">
           <img src="/Images/Icons/healthbenefits_bloodsugar (1).png" alt="" />
           <h3>Lowers Blood Sugar</h3>
           <p>
@@ -146,7 +148,7 @@
             decrease insulin resistance thereby increasing insulin sensitivity.
           </p>
         </div>
-        <div>
+        <div class="subItem">
           <img src="/Images/Icons/healthbenefits_cancer.png" alt="" />
           <h3>Fights Cancer</h3>
           <p>
@@ -158,7 +160,7 @@
             vomiting, and hair loss.
           </p>
         </div>
-        <div>
+        <div class="subItem">
           <img src="/Images/Icons/home_immune.png" alt="" />
           <h3>Boosts Immune System</h3>
           <p>
@@ -168,7 +170,7 @@
             immune system to more quickly and efficiently fight against illness.
           </p>
         </div>
-        <div>
+        <div class="subItem">
           <img src="/Images/Icons/healthbenefits_heart.png" alt="" />
           <h3>Heart Health & Weight Loss</h3>
           <p>
@@ -188,7 +190,7 @@
       <div><img src="/Images/Photos/Shogun_084.jpg" alt="" /></div>
       <div class="dividingLine">
         <h2>About The Shogun Facility</h2>
-        <h4>
+        <h4 class="type1">
           A State Of The Art Facility Perfected To Guarantee Exceptional
           Results.
         </h4>
